--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,11 @@
     <script src="../../js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/holderjs@2.9.4/holder.js"></script>
     <script src="offcanvas.js"></script>
-
+    <script>
+      $(document).ready(function(){
+          $('[data-toggle="popover"]').popover(); 
+      });
+      </script>
+      
   </body>
 </html>
