--- a/telebazz-sender-src/public/index.html
+++ b/telebazz-sender-src/public/index.html
@@ -63,9 +63,9 @@
     <script type="text/javascript" src="cordova.js"></script>
     
     <script>
-      $(document).ready(function () {
-        $('[data-toggle="popover"]').popover();
-      });
+      // $(document).ready(function () {
+      //   $('[data-toggle="popover"]').popover();
+      // });
     </script>
 
 </body>
